apps/headlamp/network-policy.yaml
# Default deny all ingress and egress for the entire namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: headlamp
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: headlamp
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            io.kubernetes.pod.namespace: ingress-nginx
      authentication:
        mode: "required"
      toPorts:
        - ports:
            - port: "4466"
              protocol: TCP
  egress:
    # kube-apiserver
    - toEntities:
        - kube-apiserver
    # kube-dns
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
